[package]
name = "krct_async"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
csv = "1.3.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
rust_decimal = { version ="1.36.0", features=["serde", "serde-with-str"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full","io-util"] }
tokio-stream = "0.1.16"
